--- a/src/css/packages.module.css
+++ b/src/css/packages.module.css
@@ -1,6 +1,9 @@
 .packages {
   background: var(--mainWhite);
-  padding: 4rem 0;
+  padding: 3rem 0;
+}
+.packages div {
+  margin-top: 1rem;
 }
 .center {
   width: 80vw;
@@ -16,11 +19,12 @@
 
 .package-title {
   text-align: center;
-  margin: 1.2rem;
-  font-size: 1.5rem;
+  margin: 1rem;
+  font-size: 1.65rem;
 }
 
 .package-description {
+  padding-left: 1.5rem;
   font-size: 1rem;
   border: 20px;
   border-radius: 20px;
